fixed popup box not showing correctly

--- a/src/OrderReview/OrderReview.css
+++ b/src/OrderReview/OrderReview.css
@@ -2,11 +2,11 @@
     display: flex;
 }
 
-.OrderReview>div {
+.OrderReview>div:not(.popup-box) {
     margin: 1em;
 }
 
-.OrderReview>div>* {
+.OrderReview>div:not(.popup-box)>* {
     margin: 5px;
 }
 
